# talent_selection_flow_crewai

./: .gitignore  README.md  app.py  chainlit.md  chainlit_app.py  main.py  pyproject.toml
.chainlit/: config.toml
.github/: pull_request_template.md
docs/: crewai_flow.html  crewai_flow_script.js
notebooks/: chromadb_ingestion.ipynb  data_process.ipynb  db_analysis.ipynb  dev.ipynb  talent_selection_flow_run.ipynb
src/: constants.py  exceptions.py
src/config/: params.py  paths.py
src/db_ingestion/: chroma_client.py  metadata_extractor.py  schemas.py
src/db_ingestion/metadata_extraction_crew/: crew.py  crews.py  guardrails.py  schemas.py
src/db_ingestion/metadata_extraction_crew/config/: agents.yaml  tasks.yaml
src/llm/: llm_config.py
src/talent_selection_flow/: flow.py  main.py  schemas.py
src/talent_selection_flow/crews/: guardrails.py  schemas.py  utils.py
src/talent_selection_flow/crews/classification_crew/: crew.py  enums.py  guardrails.py
src/talent_selection_flow/crews/cv_to_job_crew/: crew.py  guardrails.py  schemas.py  utils.py
src/talent_selection_flow/crews/hr_consultant_crew/: crew.py
src/talent_selection_flow/crews/job_to_cv_crew/: crew.py  schemas.py  utils.py
src/talent_selection_flow/crews/job_to_cv_crew (wip)/: crew.py
src/talent_selection_flow/crews/metadata_extraction_crew/: crews.py  enums.py  guardrails.py  schemas.py
src/talent_selection_flow/llm/: llm_config.py
src/talent_selection_flow/tools/: chromadb_matcher.py
src/utils/: callback.py  guardrails.py  logger.py
tests/unit_tests/: base_test_case.py  conftest.py
(+15 files in other folders)
