[project]
name = "os-multiagent-system"
version = "0.1.0"
description = "Open source project to build a talent-selection multi-agent system in Python."
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "crewai[google-genai]>=1.9.3",
    "litellm>=1.75.3",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
]

[dependency-groups]
# To solve litellm_logging dependency issues
litellm-logging = [
  "apscheduler>=3.11.2",
  "fastapi>=0.128.8",
  "fastapi-sso>=0.20.0",
  "pydantic[email]>=2.11.10",
]

# Tooling — not required to run your app
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5",
  "mypy>=1.8",
]
# Only for testing workflows
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
# Only if you want to run the dashboard
dashboard = [
  "chainlit>=1.0",
]

# Ruff configuration (https://docs.astral.sh/ruff/configuration/)
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# A solid default selection for apps:
# E/F: pycodestyle+pyflakes, B: bugbear, I: import sorting, UP: pyupgrade
select = ["E", "F", "B", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
# Ruff formatter is Black-like by default; you can keep defaults or tweak.
quote-style = "double"

# Mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true  # This is pragmatic for apps early on; tighten later
files = ["src", "tests"]  # Run mypy on these folders (when invoked without explicit paths)
